# cloud-file-storage

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.kr.md  README.md  schema.sql
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  i18n.js  main.js  router.js
frontend/src/components/: Account.vue  Turnstile.vue
frontend/src/components/Dashboard/: Header.vue  Preview.vue  Setting.vue  Share.vue  Table.vue  Upload.vue
frontend/src/composables/: useDashboard.js
frontend/src/locales/: en.json  ko.json
frontend/src/styles/: Account.scss  Font.scss  variables.scss
frontend/src/styles/Dashboard/: Header.scss  Preview.scss  Setting.scss  Share.scss  Table.scss  Upload.scss
frontend/src/views/: Dashboard.vue
src/: main.rs
src/database/: mod.rs  mysql.rs  s3client.rs
src/encrypt/: bcrypt.rs  mod.rs
src/middleware/: basic.rs  bearer.rs  mod.rs
src/router/: mod.rs  router.rs  state.rs
src/service/: content.rs  mod.rs  session.rs  user.rs
src/unique/: mod.rs  snowflake.rs
