[package]
name = "cloud-file-storage"
version = "0.1.0"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
snowflake-id-generator = "0.3.0"
cf-turnstile = "0.2.0"
aws-config = "1.8.10"
aws-sdk-s3 = "1.110.0"
env_logger = "0.11.8"
serde_json = "1.0.145"
actix-files = "0.6.8"
actix-cors = "0.7.1"
actix-web = "4.11.0"
bcrypt = "0.17.1"
dotenv = "0.15.0"
